Implemented support for determining if a user is within a geofence\nUpdated the UI to utilize a better user experience

--- a/Geofence/Info.plist
+++ b/Geofence/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your current location to determine if you are within a designated geofence</string>
 </dict>
 </plist>
